# Web

./: db.sqlite3  package-lock.json  pyproject.toml
backend/: settings.py  urls.py
frontend/: package-lock.json  package.json  urls.py  views.py  webpack.config.js
frontend/api/: apps.py  models.py  serializers.py  urls.py  views.py
frontend/api/migrations/: 0001_initial.py
frontend/home/: apps.py  views.py
frontend/login/: apps.py  urls.py  views.py
frontend/src/: portal.js
frontend/src/components/: App.js  CreateRoomPage.js  FilterListPage.js  HomePage.js  Portal.js  RoomJoinPage.js
frontend/static/frontend/: main.js  main.js.LICENSE.txt  portal.js  portal.js.LICENSE.txt
frontend/templates/frontend/: index.html  portal.html
